# inteli-year2-project2-social-network

./: README.md
codigo/backend/: database.sqlite  package-lock.json  package.json
codigo/backend-legacy/: .env  dev.db  package-lock.json  package.json  tsconfig.json
codigo/backend-legacy/prisma/: seed.ts
codigo/backend-legacy/src/: app.module.ts  main.ts
codigo/backend/src/: app.module.ts  logger.middleware.ts  main.ts
codigo/backend/src/applies/: apply.controller.ts  apply.module.ts  apply.service.ts
codigo/backend/src/index/: index.controller.ts
codigo/backend/src/post/: post.controller.spec.ts  post.controller.ts  post.module.ts  post.service.ts
codigo/backend/src/project/: project.controller.spec.ts  project.controller.ts  project.module.ts  project.service.spec.ts  project.service.ts
codigo/backend/src/recommendation/: recommendation.controller.ts  recommendation.module.ts  (+1 more)
codigo/backend/test/: project.e2e-spec.ts
codigo/frontend/: next.config.js  package-lock.json  package.json
codigo/frontend/pages/: 404.tsx  _app.tsx  index.tsx
codigo/frontend/services/: auth.ts  post.ts  project.ts  user.ts
codigo/frontend/styles/: globals.css
codigo/frontend/utils/: axios.ts
codigo/machine-learning/: Machine_Learning.ipynb
codigo/machine-learning-api/: Cargo.toml  Dockerfile
codigo/machine-learning-api/src/: main.rs  movie_recommender.py  movie_recommender2.py
codigo/machine-learning-api/src/model/: dataset_post.csv  requirements.txt
codigo/planejador/: pom.xml
docs/: aws_setup_aluno.md  index.md  instalacao_aluno.md  validacao_aluno.md
(+130 files in other folders)
